<resources>
    <string name="app_name">MyPracticeDemos</string>
    <string name="action_settings">Settings</string>

    <string name="notifications">Notifications</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="hello" translatable="false">Hello</string>
    <string name="how_ru" translatable="false">How are you?</string>
    <string name="good">I am fine. How are you ?</string>
    <string name="bye" translatable="false">Good bye.</string>
    <string name="localization">Localization</string>
    <string name="change_locale">Change Locale</string>
    <string name="sample_text" translatable="false">Lorem ipsum dolor sit amet, erant omnesque et usu, ne vidisse hendrerit signiferumque quo. Ut dico facer est, sint prodesset ius id. Altera vivendo ullamcorper mel ne. Vivendum repudiandae eos no. Pro ea eruditi vivendum expetendis, nihil invidunt cum in. Vel eu nemore numquam senserit. Sea soluta deterruisset et, cotidieque reformidans vituperatoribus eum ex. Vis case veniam senserit at. Solet essent fierent eos at. An dolor vitae vel. Vix an munere labores, ignota luptatum eos ei. Ut cum natum apeirian tincidunt. Invenire mnesarchum id eam, atomorum oportere his cu. Ius meliore delectus an, melius iuvaret id pri, tota omnes ei sea. Eros justo conceptam ea eam, porro mentitum in ius. Adhuc perfecto signiferumque in has, ea minim insolens nam, ne sea aperiri ponderum. Est an numquam recusabo, elit dictas aliquam te sit. Mea dolorem patrioque honestatis cu, ne omnesque officiis duo. Mei vide mediocritatem no, prodesset philosophia ius et. Ex mei apeirian similique consectetuer, vix cu dicant sadipscing, sea labores maiorum ei. Est at summo propriae quaerendum, cu mei erat corpora efficiendi. Eius mutat molestiae sit ea, vix te unum vivendum platonem, eu ornatus adolescens conclusionemque eam. In vel quando noster fabellas, eos fuisset maluisset at. Fabulas conceptam qui ne, ne everti vocibus mei. His legere necessitatibus in, sed laoreet explicari et. Dicat menandri ius ne. Magna choro suscipit eu est, possim ancillae nominavi an per. Pro ut sapientem liberavisse mediocritatem, qui ea phaedrum definitionem. Vel detracto delectus adipisci no. Esse copiosae mea cu, copiosae molestiae eu ius.</string>
    <string name="scroll" translatable="false">scroll</string>
    <string name="enteralways" translatable="false">enterAlways</string>
    <string name="scroll_enteralways" translatable="false">scroll|enterAlways</string>
    <string name="scroll_enteralwayscollapsed" translatable="false">scroll|enterAlwaysCollapsed</string>
    <string name="scroll_snap" translatable="false">scroll|snap</string>
    <string name="scroll_exituntilcollapse" translatable="false">scroll|exitUntilCollapse</string>
    <string name="scroll_snap_exituntilcollapsed" translatable="false">scroll|snap|exitUntilCollapsed</string>
    <string name="enteralwayscollapsed_snap" translatable="false">enterAlwaysCollapsed|snap</string>
    <string name="scroll_enteralways_enteralwayscollapsed" translatable="false">scroll|enterAlways|enterAlwaysCollapsed</string>
</resources>
