<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbarMain"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center|top"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/hello" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/how_ru" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/good" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/bye" />

        <Button
            android:id="@+id/btnChangeLocale"
            android:layout_width="wrap_content"
            style="@style/ButtonPrimary"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:text="@string/change_locale"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>